--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,11 @@
         "mkdir",
         "recurse",
         "submodules"
-    ]
+    ],
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/efm32-base/*/**": true
+      }
+    
 }
